Rewritten component system, made them observable, added status component and variety of parameters, simple HUD.