@@ -1,9 +1,11 @@
 package ru.mikroacse.rolespell.model.entities.components.movement;
 
 import ru.mikroacse.rolespell.model.entities.core.Entity;
-import ru.mikroacse.rolespell.model.entities.core.MovableEntity;
 import ru.mikroacse.rolespell.model.world.World;
 import ru.mikroacse.util.Position;
+import ru.mikroacse.util.Priority;
+import ru.mikroacse.util.listeners.ListenerSupport;
+import ru.mikroacse.util.listeners.ListenerSupportFactory;
 
 import java.util.LinkedList;
 
@@ -11,51 +13,75 @@ import java.util.LinkedList;
  * Created by MikroAcse on 28.03.2017.
  */
 public class PathMovementComponent extends MovementComponent {
+    private Priority priority;
     private LinkedList<Position> path;
-    private UpdateType type;
 
-    public PathMovementComponent(int x, int y, double speed) {
-        super(x, y, speed);
+    private Listener listeners;
+
+    public PathMovementComponent(Entity entity, int x, int y, double speed) {
+        super(entity, x, y, speed);
+
+        listeners = ListenerSupportFactory.create(Listener.class);
 
         path = new LinkedList<>();
-        type = UpdateType.BOTH;
+
+        priority = Priority.NEVER;
     }
 
     @Override
-    public void move(Entity entity, World world) {
-        if (path.isEmpty()) {
-            return;
+    public boolean action() {
+        if(path.isEmpty()) {
+            priority = Priority.NEVER;
+            return false;
         }
 
-        Position position = nextPosition();
-
-        switch (type) {
-            case ORIGIN:
-                setOrigin(position);
-                break;
-            case CURRENT:
-                setPosition(position);
-                break;
-            case BOTH:
-                setBoth(position);
-                break;
-        }
-
-        validate(world);
+        moveTo(path.poll(), getType());
+        listeners.pathChanged(this, Listener.Event.PATH_NEXT, path);
+        return true;
     }
 
-    public boolean moveTo(MovableEntity entity, World world, Position destination, int pathFindRadius) {
+    /**
+     * Finds nearest path to the destination point and sets.
+     * @param priority Priority of route.
+     *                 If current path's priority is bigger, movement cancels.
+     * @param pathFindRadius Radius of map's 'cut' offset.
+     * @param maxDistance Maximum distance between current entity position and destination
+     *                       If actual distance is bigger, path is being shortened.
+     */
+    // TODO: separate world path finder
+    public boolean routeTo(Position destination, Priority priority, int pathFindRadius, int maxDistance) {
+        if (priority.getValue() < this.priority.getValue()) {
+            return false;
+        }
+
+        destination.shorten(getPosition(), maxDistance);
+
+        World world = getEntity().getWorld();
         LinkedList<Position> newPath = world.getPath(getPosition(), destination, pathFindRadius);
 
-        // > 1 because first element might be entity's current position
+        // > 1 because first element is actually entity current position
         if (newPath.size() > 1) {
-            // remove first, because it's equal to entity's current position
-            newPath.remove(0);
+            // first is equal to the entity current position
+            newPath.removeFirst();
             setPath(newPath);
+
+            this.priority = priority;
             return true;
         }
 
         return false;
+    }
+
+    public void addListener(Listener listener) {
+        ((ListenerSupport<Listener>) listeners).addListener(listener);
+    }
+
+    public void removeListener(Listener listener) {
+        ((ListenerSupport<Listener>) listeners).removeListener(listener);
+    }
+
+    public void clearListeners() {
+        ((ListenerSupport<Listener>) listeners).clearListeners();
     }
 
     public LinkedList<Position> getPath() {
@@ -64,39 +90,45 @@ public class PathMovementComponent extends MovementComponent {
 
     public void setPath(LinkedList<Position> path) {
         this.path = path;
+        listeners.pathChanged(this, Listener.Event.PATH_SET, path);
     }
 
     public void addToPath(LinkedList<Position> path) {
         this.path.addAll(path);
+        listeners.pathChanged(this, Listener.Event.PATH_ADDED, path);
     }
 
     public void addToPath(Position pathPos) {
         path.add(pathPos);
+        listeners.pathChanged(this, Listener.Event.PATH_ADDED, path);
+
     }
 
     public void clearPath() {
         path.clear();
-    }
-
-    public Position nextPosition() {
-        return path.poll();
+        listeners.pathChanged(this, Listener.Event.PATH_CLEARED, path);
     }
 
     public boolean isPathEmpty() {
         return path.isEmpty();
     }
 
-    public UpdateType getType() {
-        return type;
+    /**
+     * @return Current path priority.
+     */
+    public Priority getPriority() {
+        return priority;
     }
 
-    public void setType(UpdateType type) {
-        this.type = type;
+    public void setPriority(Priority priority) {
+        this.priority = priority;
     }
 
-    public enum UpdateType {
-        ORIGIN,
-        CURRENT,
-        BOTH
+    public interface Listener extends ru.mikroacse.util.listeners.Listener {
+        public enum Event {
+            PATH_SET, PATH_CLEARED, PATH_NEXT, PATH_ADDED
+        };
+
+        public void pathChanged(PathMovementComponent movement, Event event, LinkedList<Position> path);
     }
 }
